--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.7.0",
     "marked": "^4.1.1",
     "next": "^12.2.3",
     "react": "17.0.2",
